--- a/MOD03_Datascience/03. Notebooks Ejercicios/07.matplotlib.ipynb
+++ b/MOD03_Datascience/03. Notebooks Ejercicios/07.matplotlib.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "751d03b8",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "51117b3c-f639-43ed-9677-4b92daf7addf",
    "metadata": {
     "tags": []
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numpy==2.2.0\n",
+      "numpy==2.2.1\n",
       "pandas==2.2.3\n",
       "matplotlib==3.10.0\n"
      ]
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "7d871885",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "864c82f5",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7ff42943",
    "metadata": {},
    "outputs": [],
@@ -182,17 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "90144ade",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../Data/iris.csv\")"
+    "df = pd.read_csv(\"./Data/iris.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "d77d3981-ac84-47fe-8c60-08053bb6931f",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "876869f5",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "adce8886",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "d228e38c",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "        <Axes: title={'center': 'Ancho Petalo'}>]], dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -325,12 +325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "4dbf61e7-53b3-4d29-a7a1-5425e1cb4eea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_titanic = pd.read_csv(\"../Data/titanic.csv\")"
+    "df_titanic = pd.read_csv(\"./Data/titanic.csv\")"
    ]
   },
   {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "2e60e8b9",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "c92d3698",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "fbc8f2a1",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
        "<Axes: xlabel='Sex', ylabel='count'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "id": "ac4adfd6",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "id": "100a31ad",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "id": "7f68b348",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "<Axes: xlabel='Pclass', ylabel='count'>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "id": "36f15c2e",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "id": "fed9eeb9",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 32,
    "id": "710e16a6",
    "metadata": {},
    "outputs": [
@@ -623,7 +623,7 @@
        "Text(0.5, 1.0, 'Not survived VS Survived %')"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 33,
    "id": "120210ed",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 34,
    "id": "697234dd",
    "metadata": {},
    "outputs": [],
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "6b4d6dc0",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 36,
    "id": "4a471b1e-f13f-4277-81ea-a82331189c48",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 37,
    "id": "469d157a",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 38,
    "id": "2196c8c5",
    "metadata": {},
    "outputs": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 39,
    "id": "3197eaff",
    "metadata": {},
    "outputs": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 40,
    "id": "48d0811e",
    "metadata": {},
    "outputs": [
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 41,
    "id": "4f552633",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 42,
    "id": "b69b50e9",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "ee678777-f6ac-4828-8083-c22bfdaca8d2",
    "metadata": {
     "tags": []
