--- a/MOD01_Python/01.Notebooks Ejercicios/07.funciones_15_12_2024.ipynb
+++ b/MOD01_Python/01.Notebooks Ejercicios/07.funciones_15_12_2024.ipynb
@@ -175,24 +175,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f33698b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "77d7dacb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[26, 49, 18, 12, 19, 20, 13, 38, 39, 33, 18, 16, 32, 11, 37, 19, 50, 24, 31, 36]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "numeros_aleatorios= []\n",
+    "for i in range(1,21):\n",
+    "    numero= random.randint(10,50)\n",
+    "    numeros_aleatorios.append(numero)\n",
+    "print(numeros_aleatorios)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f80ee060",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12, 13, 16, 18, 18, 19, 19, 20, 24, 26]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ten_lowers (number):\n",
+    "    number.sort()\n",
+    "    return number[1:11]\n",
+    "\n",
+    "ten_lowers(numeros_aleatorios)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f80ee060",
+   "id": "250d230f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,19 +240,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "fd7e71ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def contar_letras(frase):\n",
+    "    contador = 0\n",
+    "    for i in frase:\n",
+    "        contador +=1\n",
+    "    return contador"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "d0271389",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista= [1,2,3,55,77,88,47,4218,90,0,1,572]\n",
+    "print(contar_letras(lista))\n",
+    "frase= \"Crea una función que realice la misma tarea que len()\"\n",
+    "print(contar_letras(frase))"
+   ]
   },
   {
    "cell_type": "code",
@@ -251,19 +303,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "f47c456d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def elevar(lista):\n",
+    "    salida= []\n",
+    "    for i in lista:\n",
+    "        if type(i) == int:\n",
+    "            salida.append(i **2)\n",
+    "        elif type(i) == str:\n",
+    "            salida.append(i.upper())\n",
+    "    return salida\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "ca5a46ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 'A', 'B', 'C', 'D']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entrada = [1, 2, 3, 4, \"a\", \"b\", \"c\", \"d\"]\n",
+    "elevar(entrada)"
+   ]
   },
   {
    "cell_type": "code",
@@ -285,27 +361,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "1b368b6a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[36, 26, 50, 24, 13, 33, 19, 38, 16, 49, 20, 39, 19, 18, 31, 37, 18, 11, 32, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "random.shuffle(numeros_aleatorios)\n",
+    "print(numeros_aleatorios)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "65caaaf1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ordenar (lista):\n",
+    "    salida= list(set(lista))\n",
+    "    salida.sort()\n",
+    "    return salida"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9210d8ac",
+   "execution_count": 73,
+   "id": "bb885557",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 12, 13, 16, 18, 19, 20, 24, 26, 31, 32, 33, 36, 37, 38, 39, 49, 50]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordenar(numeros_aleatorios)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -318,27 +423,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "d1077bbf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 12, 13, 16, 18, 18, 19, 19, 20, 24, 26, 31, 32, 33, 36, 37, 38, 39, 49, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numeros_aleatorios)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "dfe055e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def numeros_pares(lista):\n",
+    "    pares= 0\n",
+    "    for i in lista:\n",
+    "        if i % 2 == 0:\n",
+    "            pares += 1\n",
+    "    return pares"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "ccf746a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeros_pares(numeros_aleatorios)"
+   ]
   },
   {
    "cell_type": "code",
