--- a/MOD06_PySpark/m6_Noelia_Madrigal.ipynb
+++ b/MOD06_PySpark/m6_Noelia_Madrigal.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " docker logs -f pyspark\n",
-    "http://127.0.0.1:8888/lab?token=34785f9fa81728d3817ec77557408965a6536f57fd451b12"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -308,16 +300,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df1 -> Regresión\n",
-    "# df2 -> Clasificación"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -326,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -544,9 +526,9 @@
      "output_type": "stream",
      "text": [
       "R2 con LinearRegression: 0.9225571268177755\n",
-      "R2 con DecisionTreeRegressor: 0.8971137918513903\n",
-      "R2 con RandomForestRegressor: 0.9116003817225712\n",
-      "R2 con GBTRegressor: 0.9618326158072891\n"
+      "R2 con DecisionTreeRegressor: 0.9049996572272508\n",
+      "R2 con RandomForestRegressor: 0.9114267936861328\n",
+      "R2 con GBTRegressor: 0.9639392749178024\n"
      ]
     }
    ],
@@ -583,13 +565,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "best_regressor= GBTRegressor()\n",
     "\n",
-    "pipeline_cross = Pipeline(stages=[\n",
+    "pipeline_cross1 = Pipeline(stages=[\n",
     "    *indexers_features,\n",
     "    *encoders_onehot,\n",
     "    imputer_numerical,\n",
@@ -609,14 +591,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GBTRegressionModel: uid=GBTRegressor_921f6f1ed9c6, numTrees=20, numFeatures=26\n",
+      "GBTRegressionModel: uid=GBTRegressor_d884df60507b, numTrees=20, numFeatures=26\n",
       "20\n",
       "10\n"
      ]
@@ -625,7 +607,7 @@
    "source": [
     "# Tarda 2 minutos\n",
     "crossval1 = CrossValidator(\n",
-    "    estimator=pipeline_cross,\n",
+    "    estimator=pipeline_cross1,\n",
     "    estimatorParamMaps= paramGrid1,\n",
     "    evaluator= RegressionEvaluator(metricName='r2'),\n",
     "    parallelism=4,\n",
@@ -648,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -913,8 +895,8 @@
      "output_type": "stream",
      "text": [
       "Accuracy con LogisticRegression: 0.6481532651745417\n",
-      "Accuracy con DecisionTreeClassifier: 0.7057198121027908\n",
-      "Accuracy con RandomForestClassifier: 0.6897853919130514\n"
+      "Accuracy con DecisionTreeClassifier: 0.7046145344017685\n",
+      "Accuracy con RandomForestClassifier: 0.6927327991157778\n"
      ]
     }
    ],
@@ -951,13 +933,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "best_classifier = DecisionTreeClassifier()\n",
     "\n",
-    "pipeline_cross = Pipeline(stages=[\n",
+    "pipeline_cross2 = Pipeline(stages=[\n",
     "    indexer_label,\n",
     "    *indexers_features,\n",
     "    *encoders_onehot,\n",
@@ -971,25 +953,25 @@
     "    ParamGridBuilder()\n",
     "    .addGrid(best_classifier.maxDepth,[10, 20])\n",
     "    .build()\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DecisionTreeClassificationModel: uid=DecisionTreeClassifier_c03a2f198737, depth=10, numNodes=945, numClasses=6, numFeatures=22\n",
+      "DecisionTreeClassificationModel: uid=DecisionTreeClassifier_c89ec50a4457, depth=10, numNodes=865, numClasses=6, numFeatures=22\n",
       "10\n"
      ]
     }
    ],
    "source": [
-    "crossval2 = CrossValidator(estimator=pipeline_cross,\n",
+    "crossval2 = CrossValidator(estimator=pipeline_cross2,\n",
     "                          estimatorParamMaps=paramGrid2,\n",
     "                          evaluator=MulticlassClassificationEvaluator(metricName='accuracy'),\n",
     "                          parallelism= 4,\n",
@@ -1011,17 +993,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy 0.7180620797642074\n",
-      "f1 0.695845078502157\n",
-      "precision 0.7051878773297258\n",
-      "recall 0.7180620797642074\n"
+      "accuracy 0.721101593442019\n",
+      "f1 0.7005178358023688\n",
+      "precision 0.7095851859626563\n",
+      "recall 0.721101593442019\n"
      ]
     }
    ],
@@ -1061,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1052,7 @@
        "22"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,22 +1063,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy 0.6792852537533388\n",
-      "f1 0.6545793490247118\n",
-      "precision 0.6543845683589713\n",
-      "recall 0.6792852537533388\n"
+      "accuracy 0.7445887445887446\n",
+      "f1 0.7389614986861559\n",
+      "precision 0.7380184703437936\n",
+      "recall 0.7445887445887446\n"
      ]
     }
    ],
    "source": [
-    "classifier_MPC = MultilayerPerceptronClassifier(layers=[22,10,5], maxIter=200, seed=42)\n",
+    "classifier_MPC = MultilayerPerceptronClassifier(layers=[22,10,5], maxIter=1000, seed=42)\n",
     "\n",
     "pipeline_MPC = Pipeline(stages=[\n",
     "    indexer_label,\n",
@@ -1117,6 +1099,16 @@
     "print('precision', evaluator_precision.evaluate(pred_MPC))\n",
     "print('recall', evaluator_recall.evaluate(pred_MPC))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusiones\n",
+    "* El modelo de regresión obtiene un 0.97 de precisión, explica bien la variación de precios de los diamantes.\n",
+    "* En la clasificación no he conseguido un modelo con buena precisión, obtiene un 0.71 de exactitud al clasificar los 5 tipos de cortes de diamantes. Si se ajusta el desbalanceo entre las clases podría mejorar.\n",
+    "* La red neuronal supera ligeramente a los otros modelos de clasificación, ajustando los hiperparámetros mejoraría pero no lo suficiente como para que compense la exigencia de recursos."
+   ]
   }
  ],
  "metadata": {
@@ -1124,18 +1116,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.6"
   }
  },
  "nbformat": 4,
