--- a/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_clasificacion.ipynb
+++ b/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_clasificacion.ipynb
@@ -120,7 +120,7 @@
      "output_type": "stream",
      "text": [
       "Accuracy en train 0.9998884633974049\n",
-      "AUC en train: 0.9999999683375093\n"
+      "AUC en train: 0.9999999899184321\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
     "    (categorical_pipeline, categorical_cols)\n",
     ")\n",
     "\n",
-    "pipeline = make_pipeline(column_transformer, RandomForestClassifier(random_state=42))\n",
+    "pipeline = make_pipeline(column_transformer, DecisionTreeClassifier())\n",
     "\n",
     "pipeline.fit(X, y_encoded)\n",
     "y_pred = pipeline.predict(X)\n",
