--- a/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_clasificacion.ipynb
+++ b/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_clasificacion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,13 @@
     "\n",
     "\n",
     "# Modelos\n",
-    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsRegressor, KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "\n",
-    "# Entrenamiento y test\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "# Métricas\n",
-    "from sklearn.metrics import r2_score, mean_absolute_error, mean_absolute_percentage_error, root_mean_squared_error\n",
     "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score, roc_auc_score, make_scorer\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay, confusion_matrix\n",
     "\n",
     "# Pipelines\n",
     "from sklearn.pipeline import Pipeline, make_pipeline\n",
