--- a/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_regresion.ipynb
+++ b/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_regresion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,6 @@
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "\n",
-    "# Métricas\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
     "# Pipelines\n",
@@ -32,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -206,13 +204,34 @@
        "max       58.900000     31.800000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SI2', 'SI1', 'VS1', 'VS2', 'VVS2', 'VVS1', 'I1', 'IF']\n",
+       "Categories (8, object): ['IF', 'VVS1', 'VVS2', 'VS1', 'VS2', 'SI1', 'SI2', 'I1']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['clarity'].unique()"
    ]
   },
   {
@@ -224,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +262,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,53 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 53940 entries, 0 to 53939\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column   Non-Null Count  Dtype   \n",
-      "---  ------   --------------  -----   \n",
-      " 0   carat    53940 non-null  float64 \n",
-      " 1   cut      53940 non-null  category\n",
-      " 2   color    53940 non-null  category\n",
-      " 3   clarity  53940 non-null  category\n",
-      " 4   depth    53940 non-null  float64 \n",
-      " 5   table    53940 non-null  float64 \n",
-      " 6   price    53940 non-null  int64   \n",
-      " 7   x        53932 non-null  float64 \n",
-      " 8   y        53933 non-null  float64 \n",
-      " 9   z        53920 non-null  float64 \n",
-      "dtypes: category(3), float64(6), int64(1)\n",
-      "memory usage: 3.0 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "146\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "146\n",
       "0\n"
      ]
     }
@@ -315,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 en train 0.9906626690008378\n"
+      "R2 en train 0.9999950391595334\n"
      ]
     }
    ],
@@ -351,7 +331,7 @@
     "    (numerical_pipeline, numerical_cols),\n",
     "    (categorical_pipeline, categorical_cols)\n",
     ")\n",
-    "pipeline = make_pipeline(column_transformer, GradientBoostingRegressor(max_depth=8))\n",
+    "pipeline = make_pipeline(column_transformer, DecisionTreeRegressor())\n",
     "\n",
     "pipeline.fit(X, y)\n",
     "print('R2 en train', pipeline.score(X, y))"
@@ -359,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +348,7 @@
        "['pipeline_regresion.joblib']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
