--- a/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_clasificacion.ipynb
+++ b/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_clasificacion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4   0.31     Good     J     SI2   63.3   58.0    335  4.34  4.35  2.75"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -218,29 +218,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(['cut'], axis=1)\n",
-    "y = df['cut']\n",
-    "y_encoded = LabelEncoder().fit_transform(y)\n",
-    "\n",
+    "df['cut_encoded'] = LabelEncoder().fit(\n",
+    "    ['Fair', 'Good', 'Very Good', 'Premium', 'Ideal']\n",
+    ").transform(df['cut'])\n",
     "categorical_cols = ['color', 'clarity']\n",
     "numerical_cols = ['carat', 'depth', 'price','table', 'x', 'y', 'z']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(['cut', 'cut_encoded'], axis=1)\n",
+    "y = df['cut_encoded']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy en train 0.9998884633974049\n",
-      "AUC en train: 0.9999999899184321\n"
+      "Accuracy en train 0.8317656244190802\n",
+      "AUC en train: 0.9746648519163269\n"
      ]
     }
    ],
@@ -256,21 +265,32 @@
     "    (categorical_pipeline, categorical_cols)\n",
     ")\n",
     "\n",
-    "pipeline = make_pipeline(column_transformer, DecisionTreeClassifier())\n",
+    "pipeline = make_pipeline(column_transformer, RandomForestClassifier(max_depth=15))\n",
     "\n",
-    "pipeline.fit(X, y_encoded)\n",
+    "pipeline.fit(X, y)\n",
     "y_pred = pipeline.predict(X)\n",
     "y_pred_prob = pipeline.predict_proba(X)\n",
-    "auc = roc_auc_score(y_encoded, y_pred_prob, multi_class='ovr')\n",
-    "print('Accuracy en train', accuracy_score(y_encoded, y_pred))\n",
+    "auc = roc_auc_score(y, y_pred_prob, multi_class='ovr')\n",
+    "print('Accuracy en train', accuracy_score(y, y_pred))\n",
     "print('AUC en train:', auc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pipeline_clasificacion.joblib']"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "joblib.dump(pipeline, 'pipeline_clasificacion.joblib')"
    ]
