--- a/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_regresion.ipynb
+++ b/MOD07_Streamlit_Noelia_Madrigal/notebooks/pipeline_regresion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,13 @@
     "\n",
     "# Herramientas de preprocesamiento\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import MinMaxScaler, OneHotEncoder, QuantileTransformer"
+    "from sklearn.preprocessing import MinMaxScaler, OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +205,7 @@
        "max       58.900000     31.800000  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
        "Categories (8, object): ['IF', 'VVS1', 'VVS2', 'VS1', 'VS2', 'SI1', 'SI2', 'I1']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +263,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,14 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 en train 0.9999950391595334\n"
+      "R2 en train 0.9947864698815451\n"
      ]
     }
    ],
@@ -331,7 +332,7 @@
     "    (numerical_pipeline, numerical_cols),\n",
     "    (categorical_pipeline, categorical_cols)\n",
     ")\n",
-    "pipeline = make_pipeline(column_transformer, DecisionTreeRegressor())\n",
+    "pipeline = make_pipeline(column_transformer, GradientBoostingRegressor(max_depth=10))\n",
     "\n",
     "pipeline.fit(X, y)\n",
     "print('R2 en train', pipeline.score(X, y))"
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +349,7 @@
        "['pipeline_regresion.joblib']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
