--- a/MOD07_Streamlit_Noelia_Madrigal/pages/pipeline_regresion.ipynb
+++ b/MOD07_Streamlit_Noelia_Madrigal/pages/pipeline_regresion.ipynb
@@ -65,6 +65,219 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>carat</th>\n",
+       "      <th>cut</th>\n",
+       "      <th>color</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>price</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.23</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>E</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>61.5</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>326</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>2.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.23</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>J</td>\n",
+       "      <td>VS1</td>\n",
+       "      <td>62.8</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>340</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>2.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.31</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>J</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>62.2</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>344</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>4.37</td>\n",
+       "      <td>2.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.30</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>I</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>348</td>\n",
+       "      <td>4.31</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>2.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28262</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>H</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>62.8</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>357</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>2.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27735</th>\n",
+       "      <td>1.60</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>F</td>\n",
+       "      <td>VS1</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>18780</td>\n",
+       "      <td>7.47</td>\n",
+       "      <td>7.52</td>\n",
+       "      <td>4.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27738</th>\n",
+       "      <td>2.05</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>61.9</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>18787</td>\n",
+       "      <td>8.10</td>\n",
+       "      <td>8.16</td>\n",
+       "      <td>5.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27741</th>\n",
+       "      <td>2.15</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>62.6</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>18791</td>\n",
+       "      <td>8.29</td>\n",
+       "      <td>8.35</td>\n",
+       "      <td>5.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27746</th>\n",
+       "      <td>2.07</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>62.5</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>18804</td>\n",
+       "      <td>8.20</td>\n",
+       "      <td>8.13</td>\n",
+       "      <td>5.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27747</th>\n",
+       "      <td>1.51</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>61.7</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>18806</td>\n",
+       "      <td>7.37</td>\n",
+       "      <td>7.41</td>\n",
+       "      <td>4.56</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21551 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       carat    cut color clarity  depth  table  price     x     y     z\n",
+       "0       0.23  Ideal     E     SI2   61.5   55.0    326  3.95  3.98  2.43\n",
+       "11      0.23  Ideal     J     VS1   62.8   56.0    340  3.93  3.90  2.46\n",
+       "13      0.31  Ideal     J     SI2   62.2   54.0    344  4.35  4.37  2.71\n",
+       "16      0.30  Ideal     I     SI2   62.0   54.0    348  4.31  4.34  2.68\n",
+       "28262   0.25  Ideal     H     SI1   62.8   54.0    357  4.05  4.07  2.55\n",
+       "...      ...    ...   ...     ...    ...    ...    ...   ...   ...   ...\n",
+       "27735   1.60  Ideal     F     VS1   62.0   56.0  18780  7.47  7.52  4.65\n",
+       "27738   2.05  Ideal     G     SI1   61.9   57.0  18787  8.10  8.16  5.03\n",
+       "27741   2.15  Ideal     G     SI2   62.6   54.0  18791  8.29  8.35  5.21\n",
+       "27746   2.07  Ideal     G     SI2   62.5   55.0  18804  8.20  8.13  5.11\n",
+       "27747   1.51  Ideal     G      IF   61.7   55.0  18806  7.37  7.41  4.56\n",
+       "\n",
+       "[21551 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['cut'] == 'Ideal'].sort_values('price', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
